# data_transfer

./: .gitignore  README.md
app/: CMakeLists.txt
app/sources/: main.cpp
app/sources/client/: client.cpp  client.h
app/sources/data_package/: datatpackage.cpp  datatpackage.h
app/sources/event_loop/: eventloop.cpp  eventloop.h
app/sources/file_send_state/: transmittionStatus.h
app/sources/helpers/: helpers.cpp  helpers.h
app/sources/io_device/: iodevice.cpp  iodevice.h
app/sources/logger/: logger.h
app/sources/main_object/: mainobject.cpp  mainobject.h
app/sources/server/: server.cpp  server.h
app/sources/session/: session.cpp  session.h
app/sources/socket/: socket.cpp  socket.h
app/sources/thread_pool/: threadpool.h
app/sources/time/: time.cpp  time.h
